--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -7,7 +7,7 @@
           <nav>
             <ul class="nav masthead-nav">
               <li class="active">
-                <a href="#">Contact</a>
+                <a href="/contact">Contact</a>
               </li>
             </ul>
           </nav>
@@ -36,7 +36,7 @@
 
       <div class="mastfoot">
         <div class="inner">
-          <p class="text-info"><strong>Online Bookstore</strong> <i class="fa fa-star fa-lg"></i> 2016</p>
+          <p class="text-info"><strong>Online Bookstore <i class="fa fa-star fa-lg"></i> 2016</strong></p>
         </div>
       </div>
 
