--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,45 +1,33 @@
-<div class="site-wrapper">
-  <div class="site-wrapper-inner">
-    <div class="cover-container">
-
-      <div class="masthead clearfix">
-        <div class="inner">
-          <nav>
-            <ul class="nav masthead-nav">
-              <li class="active">
-                <a href="/contact">Contact</a>
-              </li>
-            </ul>
-          </nav>
-        </div>
-      </div>
-
-      <div class="login inner">
-        <form class="form-horizontal">
-          <div class="form-group">
-            <div class="col-sm-offset-3 col-sm-6">
-              <input type="email" class="form-control" id="email" placeholder="Email">
-            </div>
-          </div>
-          <div class="form-group">
-            <div class="col-sm-offset-3 col-sm-6">
-              <input type="password" class="form-control" id="password" placeholder="Password">
-            </div>
-          </div>
-          <div class="form-group">
-            <div class="col-sm-offset-3 col-sm-6">
-              <button type="submit" class="btn btn-block btn-success"><i class="fa fa-sign-in"></i></button>
-            </div>
-          </div>
-        </form>
-      </div>
-
-      <div class="mastfoot">
-        <div class="inner">
-          <p class="text-info"><strong>Online Bookstore <i class="fa fa-star fa-lg"></i> 2016</strong></p>
-        </div>
-      </div>
-
-    </div>
+<div class="masthead clearfix">
+  <div class="inner">
+    <nav>
+      <ul class="nav masthead-nav">
+        <li class="active">
+          <a href="/contact">Contact</a>
+        </li>
+      </ul>
+    </nav>
   </div>
+</div>
+
+<div class="login inner">
+  <form class="form-horizontal">
+    <div class="form-group">
+      <div class="col-sm-offset-3 col-sm-6">
+        <input type="email" class="form-control" id="email" placeholder="Email">
+      </div>
+    </div>
+    <div class="form-group">
+      <div class="col-sm-offset-3 col-sm-6">
+        <input type="password" class="form-control" id="password" placeholder="Password">
+      </div>
+    </div>
+    <div class="form-group">
+      <div class="col-sm-offset-3 col-sm-6">
+        <button type="submit" class="btn btn-block btn-success">
+          <i class="fa fa-sign-in"></i>
+        </button>
+      </div>
+    </div>
+  </form>
 </div>
