--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -13,17 +13,17 @@
 <div class="login inner">
   <form class="form-horizontal">
     <div class="form-group">
-      <div class="col-sm-offset-3 col-sm-6">
-        <input type="email" class="form-control" id="email" placeholder="Email">
+      <div class="col-md-offset-4 col-md-4">
+        <input type="email" class="form-control input-lg" id="email" placeholder="Email">
       </div>
     </div>
     <div class="form-group">
-      <div class="col-sm-offset-3 col-sm-6">
-        <input type="password" class="form-control" id="password" placeholder="Password">
+      <div class="col-md-offset-4 col-md-4">
+        <input type="password" class="form-control input-lg" id="password" placeholder="Password">
       </div>
     </div>
     <div class="form-group">
-      <div class="col-sm-offset-3 col-sm-6">
+      <div class="col-md-offset-4 col-md-4">
         <button type="submit" class="btn btn-block btn-success">
           <i class="fa fa-sign-in"></i>
         </button>
