--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -23,7 +23,7 @@ html, body {
 .site-wrapper {
   display: table;
   width: 100%;
-  height: 100%; /* For at least Firefox */
+  height: 100%;
   min-height: 100%;
   background: url("cover.jpeg");
   background-size: cover;
@@ -35,7 +35,9 @@ html, body {
 .site-wrapper-inner {
   display: table-cell;
   vertical-align: top;
+  padding-top: 15%;
 }
+
 .cover-container {
   margin-right: auto;
   margin-left: auto;
@@ -50,9 +52,15 @@ html, body {
 /*
  * Header
  */
+ .masthead {
+   position: fixed;
+   top: 0;
+ }
+
 .masthead-brand {
   margin-top: 10px;
   margin-bottom: 10px;
+  float: left;
 }
 
 .masthead-nav > li {
@@ -83,23 +91,14 @@ html, body {
   border-bottom-color: #fff;
 }
 
-@media (min-width: 768px) {
-  .masthead-brand {
-    float: left;
-  }
-  .masthead-nav {
-    float: right;
-  }
+.masthead-nav {
+  float: right;
 }
 
 
 /*
  * Login
  */
-
-.login {
-  padding: 0 20%;
-}
 .login .btn-lg {
   padding: 10px 20px;
   font-weight: bold;
@@ -110,42 +109,13 @@ html, body {
  */
 
 .mastfoot {
-  color: #999; /* IE8 proofing */
+  color: #999;
   color: rgba(255,255,255,.5);
+  position: fixed;
+  bottom: 0;
+  width: 100%;
 }
 
-
-/*
- * Affix and center
- */
-
-@media (min-width: 768px) {
-  /* Pull out the header and footer */
-  .masthead {
-    position: fixed;
-    top: 0;
-  }
-  .mastfoot {
-    position: fixed;
-    bottom: 0;
-  }
-  /* Start the vertical centering */
-  .site-wrapper-inner {
-    padding-top: 15%;
-    // vertical-align: middle;
-  }
-  /* Handle the widths */
-  .masthead,
-  .mastfoot,
-  .cover-container {
-    width: 100%; /* Must be percentage or pixels for horizontal alignment */
-  }
-}
-
-@media (min-width: 992px) {
-  .masthead,
-  .mastfoot,
-  .cover-container {
-    width: 80%;
-  }
+.masthead, .mastfoot, .cover-container {
+  width: 60%;
 }
