--- a/app/views/home/contact.html.erb
+++ b/app/views/home/contact.html.erb
@@ -3,7 +3,7 @@
     <nav>
       <ul class="nav masthead-nav">
         <li class="active">
-          <a href="/">Home</a>
+          <a href="/">首页</a>
         </li>
       </ul>
     </nav>
