--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,7 +3,7 @@
     <nav>
       <ul class="nav masthead-nav">
         <li class="active">
-          <a href="/contact">Contact</a>
+          <a href="/contact">关于</a>
         </li>
       </ul>
     </nav>
@@ -14,12 +14,12 @@
   <form class="form-horizontal">
     <div class="form-group">
       <div class="col-md-offset-4 col-md-4">
-        <input type="email" class="form-control input-lg" id="email" placeholder="Email">
+        <input type="email" class="form-control input-lg" id="email" placeholder="邮箱">
       </div>
     </div>
     <div class="form-group">
       <div class="col-md-offset-4 col-md-4">
-        <input type="password" class="form-control input-lg" id="password" placeholder="Password">
+        <input type="password" class="form-control input-lg" id="password" placeholder="密码">
       </div>
     </div>
     <div class="form-group">
