update the css for better UI

--- a/app/views/home/contact.html.erb
+++ b/app/views/home/contact.html.erb
@@ -1,40 +1,42 @@
-<div class="masthead clearfix">
-  <div class="inner">
-    <nav>
-      <ul class="nav masthead-nav">
-        <li class="active">
-          <a href="/">首页</a>
-        </li>
-      </ul>
-    </nav>
+<div class="home-wrapper">
+  <div class="masthead clearfix">
+    <div class="inner">
+      <nav>
+        <ul class="nav masthead-nav">
+          <li class="active">
+            <a href="/">首页</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
   </div>
-</div>
 
-<div class="inner">
-  <div class="row">
-    <div class="col-sm-4">
-      <div class="panel panel-primary">
-        <div class="panel-heading">
-          <h3 class="panel-title">说明</h3>
-        </div>
-        <div class="panel-body">
-          <dl>
-            <dd>本系统仅限内部使用，相关事宜请联系管理员</dd>
-            <dd><%= image_tag "wechat_code.jpg", size: "120"%></dd>
-            <dd>爱护书籍，让知识更好地传递</dd>
-            <dd>更多信息，请参考confluence Minerva‘s Book Lib</dd>
-          </dl>
-          <div class="panel panel-info">
-            <div class="panel-heading">
-              <h3 class="panel-title">开发者</h3>
-            </div>
-            <div class="panel-body">
-              <div class="row">
-                <div class="col-sm-12">
-                  <div class="thumbnail">
-                    <%= image_tag "shawzt.jpg", size: "80"%>
-                    <h3>Shaw</h3>
-                    <p>zhengtao.xiao@sap.com</p>
+  <div class="inner">
+    <div class="row">
+      <div class="col-sm-4">
+        <div class="panel panel-primary">
+          <div class="panel-heading">
+            <h3 class="panel-title">说明</h3>
+          </div>
+          <div class="panel-body">
+            <dl>
+              <dd>本系统仅限内部使用，相关事宜请联系管理员</dd>
+              <dd><%= image_tag "wechat_code.jpg", size: "120"%></dd>
+              <dd>爱护书籍，让知识更好地传递</dd>
+              <dd>更多信息，请参考confluence Minerva‘s Book Lib</dd>
+            </dl>
+            <div class="panel panel-info">
+              <div class="panel-heading">
+                <h3 class="panel-title">开发者</h3>
+              </div>
+              <div class="panel-body">
+                <div class="row">
+                  <div class="col-sm-12">
+                    <div class="thumbnail">
+                      <%= image_tag "shawzt.jpg", size: "80"%>
+                      <h3>Shaw</h3>
+                      <p>zhengtao.xiao@sap.com</p>
+                    </div>
                   </div>
                 </div>
               </div>
@@ -42,39 +44,39 @@
           </div>
         </div>
       </div>
-    </div>
-    <div class="col-sm-8">
-      <div class="panel panel-info">
-        <div class="panel-heading">
-          <h3 class="panel-title">管理员</h3>
-        </div>
-        <div class="panel-body">
-          <div class="col-sm-6">
-            <div class="thumbnail">
-              <%= image_tag "admin.png", size: "80"%>
-              <h3>Megan Wang</h3>
-              <p>minyue.wang@sap.com</p>
-            </div>
+      <div class="col-sm-8">
+        <div class="panel panel-info">
+          <div class="panel-heading">
+            <h3 class="panel-title">管理员</h3>
           </div>
-          <div class="col-sm-6">
-            <div class="thumbnail">
-              <%= image_tag "admin.png", size: "80"%>
-              <h3>Michael Huang</h3>
-              <p>michael.huang02@sap.com</p>
+          <div class="panel-body">
+            <div class="col-sm-6">
+              <div class="thumbnail">
+                <%= image_tag "admin.png", size: "80"%>
+                <h3>Megan Wang</h3>
+                <p>minyue.wang@sap.com</p>
+              </div>
             </div>
-          </div>
-          <div class="col-sm-6">
-            <div class="thumbnail">
-              <%= image_tag "admin.png", size: "80"%>
-              <h3>Yaming Zhao</h3>
-              <p>yaming.zhao@sap.com</p>
+            <div class="col-sm-6">
+              <div class="thumbnail">
+                <%= image_tag "admin.png", size: "80"%>
+                <h3>Michael Huang</h3>
+                <p>michael.huang02@sap.com</p>
+              </div>
             </div>
-          </div>
-          <div class="col-sm-6">
-            <div class="thumbnail">
-              <%= image_tag "admin.png", size: "80"%>
-              <h3>Carol Xu</h3>
-              <p>zhenzhi.xu@sap.com</p>
+            <div class="col-sm-6">
+              <div class="thumbnail">
+                <%= image_tag "admin.png", size: "80"%>
+                <h3>Yaming Zhao</h3>
+                <p>yaming.zhao@sap.com</p>
+              </div>
+            </div>
+            <div class="col-sm-6">
+              <div class="thumbnail">
+                <%= image_tag "admin.png", size: "80"%>
+                <h3>Carol Xu</h3>
+                <p>zhenzhi.xu@sap.com</p>
+              </div>
             </div>
           </div>
         </div>
