--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -32,10 +32,19 @@ html, body {
           box-shadow: inset 0 0 100px rgba(0,0,0,.5);
 }
 
-.site-wrapper-inner {
-  display: table-cell;
+.home-wrapper {
+  vertical-align: top;
+  padding-top: 20%;
+}
+
+.guide-wrapper {
   vertical-align: top;
   padding-top: 15%;
+}
+
+.books-wrapper {
+  vertical-align: top;
+  padding-top: 10%;
 }
 
 .cover-container {
