--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,67 +1,44 @@
-<div class="masthead clearfix">
-  <div class="inner">
-    <nav>
-      <ul class="nav nav-pills navbar-nav navbar-left">
-        <li class="active"><a href="/books">图书</a></li>
-        <li><a href="/books/recommend">推荐</a></li>
-        <li><a href="/contact">关于</a></li>
-      </ul>
-      <ul class="nav nav-pills navbar-nav navbar-right">
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-user fa-2x"></i><span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="/user">个人信息</a></li>
-            <li><a href="/user/history">借阅记录</a></li>
-            <li class="divider"></li>
-            <li><a href="/user/logout">退出</a></li>
-          </ul>
-        </li>
-      </ul>
-    </nav>
+<div class="books-wrapper">
+  <div class="masthead clearfix">
+    <div class="inner">
+      <nav>
+        <ul class="nav nav-pills navbar-nav navbar-left">
+          <li><a href="<%= guide_books_path %>">检索</a></li>
+          <li class="active"><a href="<%= books_path %>">图书</a></li>
+          <li><a href="/books/recommend">推荐</a></li>
+          <li><a href="/contact">关于</a></li>
+        </ul>
+        <ul class="nav nav-pills navbar-nav navbar-right">
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-user fa-2x"></i><span class="caret"></span></a>
+            <ul class="dropdown-menu">
+              <li><a href="/user">个人信息</a></li>
+              <li><a href="/user/history">借阅记录</a></li>
+              <li class="divider"></li>
+              <li><a href="/user/logout">退出</a></li>
+            </ul>
+          </li>
+        </ul>
+      </nav>
+    </div>
   </div>
-</div>
 
-<form class="form-horizontal">
-  <div class="form-group">
-    <div class="col-md-offset-2 col-md-8">
-      <input type="text" class="form-control input-lg" id="keyword">
+  <div class="row">
+    <div class="col-md-2">
+      <div class="thumbnail">
+        <a href="#" class="thumbnail">
+          <img src="https://img1.doubanio.com/lpic/s28583287.jpg">
+        </a>
+        <div class="caption">
+          <h3>书名</h3>
+          <p>类型</p>
+          <p>
+            <span class="label label-default">总量:</span>
+            <span class="label label-default">库存:</span>
+            <span class="label label-default">排队:</span>
+          </p>
+        </div>
+      </div>
     </div>
   </div>
-  <div class="form-group">
-    <div class="col-md-offset-4 col-md-4">
-      <button type="submit" class="btn btn-success">按需检索</button>
-      <a class="btn btn-primary" href="/books">随便看看</a>
-    </div>
-  </div>
-</form>
-
-<h2><span class="label label-info">新书上架</span></h2>
-<div id="new-books" class="carousel slide" data-ride="carousel">
-  <!-- Indicators -->
-  <ol class="carousel-indicators">
-    <li data-target="#new-books" data-slide-to="0" class="active"></li>
-    <li data-target="#new-books" data-slide-to="1"></li>
-    <li data-target="#new-books" data-slide-to="2"></li>
-  </ol>
-   <!-- Wrapper for slides -->
-  <div class="carousel-inner" role="listbox">
-    <div class="item active">
-      <img class="center-block" src="https://img3.doubanio.com/lpic/s28453934.jpg">
-    </div>
-    <div class="item">
-      <img class="center-block" src="https://img3.doubanio.com/lpic/s28600765.jpg">
-    </div>
-    <div class="item">
-      <img class="center-block" src="https://img3.doubanio.com/lpic/s28505371.jpg">
-    </div>
-  </div>
-  <!-- Controls -->
-  <a class="left carousel-control" href="#new-books" role="button" data-slide="prev">
-    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="right carousel-control" href="#new-books" role="button" data-slide="next">
-    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
 </div>
