--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,33 +1,35 @@
-<div class="masthead clearfix">
-  <div class="inner">
-    <nav>
-      <ul class="nav masthead-nav">
-        <li class="active">
-          <a href="/contact">关于</a>
-        </li>
-      </ul>
-    </nav>
+<div class="home-wrapper">
+  <div class="masthead clearfix">
+    <div class="inner">
+      <nav>
+        <ul class="nav masthead-nav">
+          <li class="active">
+            <a href="/contact">关于</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
   </div>
-</div>
 
-<div class="login inner">
-  <form class="form-horizontal">
-    <div class="form-group">
-      <div class="col-md-offset-4 col-md-4">
-        <input type="email" class="form-control input-lg" id="email" placeholder="邮箱">
+  <div class="login inner">
+    <form class="form-horizontal">
+      <div class="form-group">
+        <div class="col-md-offset-4 col-md-4">
+          <input type="email" class="form-control input-lg" id="email" placeholder="邮箱">
+        </div>
       </div>
-    </div>
-    <div class="form-group">
-      <div class="col-md-offset-4 col-md-4">
-        <input type="password" class="form-control input-lg" id="password" placeholder="密码">
+      <div class="form-group">
+        <div class="col-md-offset-4 col-md-4">
+          <input type="password" class="form-control input-lg" id="password" placeholder="密码">
+        </div>
       </div>
-    </div>
-    <div class="form-group">
-      <div class="col-md-offset-4 col-md-4">
-        <button type="submit" class="btn btn-block btn-success">
-          <i class="fa fa-sign-in"></i>
-        </button>
+      <div class="form-group">
+        <div class="col-md-offset-4 col-md-4">
+          <button type="submit" class="btn btn-block btn-success">
+            <i class="fa fa-sign-in"></i>
+          </button>
+        </div>
       </div>
-    </div>
-  </form>
+    </form>
+  </div>
 </div>
