--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -12,24 +12,22 @@
   </div>
 
   <div class="login inner">
-    <form class="form-horizontal">
+    <%= form_for(@user, url: user_session_path, html: {class: 'form-horizontal'}) do |f| %>
       <div class="form-group">
         <div class="col-md-offset-4 col-md-4">
-          <input type="email" class="form-control input-lg" id="email" placeholder="邮箱">
+          <%= f.email_field :email, class: 'form-control input-lg', autofocus: true, placeholder: '邮箱' %>
         </div>
       </div>
       <div class="form-group">
         <div class="col-md-offset-4 col-md-4">
-          <input type="password" class="form-control input-lg" id="password" placeholder="密码">
+          <%= f.password_field :password, class: 'form-control input-lg', autocomplete: "off", placeholder: '密码' %>
         </div>
       </div>
       <div class="form-group">
         <div class="col-md-offset-4 col-md-4">
-          <button type="submit" class="btn btn-block btn-success">
-            <i class="fa fa-sign-in"></i>
-          </button>
+          <%= f.submit "Sign in", class: 'btn btn-block btn-success' %><i class="fa fa-sign-in"></i>
         </div>
       </div>
-    </form>
+    <% end %>
   </div>
 </div>
