--- a/app/views/books/guide.html.erb
+++ b/app/views/books/guide.html.erb
@@ -15,7 +15,7 @@
               <li><a href="/user">个人信息</a></li>
               <li><a href="/user/history">借阅记录</a></li>
               <li class="divider"></li>
-              <li><a href="/user/logout">退出</a></li>
+              <li><%= link_to "退出", destroy_user_session_path, method: :delete %></li>
             </ul>
           </li>
         </ul>
