--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -53,7 +53,7 @@ body {
 }
 
 .masthead {
-  position: fixed;
+  position: absolute;
   top: 0;
 }
 
@@ -103,7 +103,7 @@ body {
 .mastfoot {
   color: #999;
   color: rgba(255,255,255,.5);
-  position: fixed;
+  position: absolute;
   bottom: 0;
   width: 100%;
 }
