--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,15 +1,17 @@
 <div class="books-wrapper">
   <%= render "layouts/header" %>
 
+  <% @books_in_group.each do |books| %>
   <div class="row">
+    <% books.each do |book| %>
     <div class="col-md-2">
       <div class="thumbnail">
         <a href="#" class="thumbnail">
-          <img src="https://img1.doubanio.com/lpic/s28583287.jpg">
+          <img src="<%= book.cover %>" style="width: 180px; height: 200px">
         </a>
         <div class="caption">
-          <h3>书名</h3>
-          <p>类型</p>
+          <h5><%= book.name %></h5>
+          <p><%= book.category %></p>
           <p>
             <span class="label label-default">总量:</span>
             <span class="label label-default">库存:</span>
@@ -18,5 +20,7 @@
         </div>
       </div>
     </div>
+    <% end %>
   </div>
+  <% end %>
 </div>
