--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -25,7 +25,7 @@
       </div>
       <div class="form-group">
         <div class="col-md-offset-4 col-md-4">
-          <%= f.submit "Sign in", class: 'btn btn-block btn-success' %><i class="fa fa-sign-in"></i>
+          <%= f.submit "登录", class: 'btn btn-block btn-success' %>
         </div>
       </div>
     <% end %>
