--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,5 +1,5 @@
-<div class="mastfoot">
-  <div class="inner">
+<footer class="footer">
+  <div class="container">
     <p class="text-info"><strong>Online Bookstore <i class="fa fa-star fa-lg"></i> 2016</strong></p>
   </div>
-</div>
+</footer>
