show book information in detail

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -43,6 +43,11 @@ body {
   padding-top: 6%;
 }
 
+.book-wrapper {
+  vertical-align: top;
+  padding-top: 12%;
+}
+
 .cover-container {
   margin-right: auto;
   margin-left: auto;
