support to show storage information

--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -13,8 +13,8 @@
           <h5><%= book.name %></h5>
           <p><%= book.category %></p>
           <p>
-            <span class="label label-default">总量:</span>
-            <span class="label label-default">库存:</span>
+            <span class="label label-default">总量: <%= book.total %></span>
+            <span class="label label-default">库存: <%= book.available %></span>
             <span class="label label-default">排队:</span>
           </p>
         </div>
