--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -16,5 +16,13 @@
       <p class="text-justify"><%= @book.intro %></p>
     </div>
   </div>
-
+  <br>
+  <div class="row">
+    <div class="col-md-6">
+      <h3>
+        <span class="label label-default">总量: <%= @book.total %></span>
+        <span class="label label-default">库存: <%= @book.available %></span>
+      </h3>
+    </div>
+  </div>
 </div>
