--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -24,5 +24,9 @@
         <span class="label label-default">库存: <%= @book.available %></span>
       </h3>
     </div>
+    <div class="col-md-6 text-right">
+      <button type="button" class="btn btn-lg btn-primary">预约</button>
+      <%= link_to "借阅", borrow_book_path(@book), method: :post, class: 'btn btn-lg btn-success' %>
+    </div>
   </div>
 </div>
