--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,6 +1,15 @@
 <div class="book-wrapper">
   <%= render "layouts/header" %>
 
+  <% if @record %>
+  <div class="alert alert-warning alert-dismissible fade in" role="alert">
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+      <span aria-hidden="true">×</span>
+    </button>
+    <strong>借阅成功!</strong> 到期时间: <%= @record.should_return_date %>
+  </div>
+  <% end %>
+
   <div class="row">
     <div class="col-md-6">
       <img src="<%= @book.cover %>">
