--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -7,14 +7,22 @@
       <button type="button" class="close" data-dismiss="alert" aria-label="Close">
         <span aria-hidden="true">×</span>
       </button>
-      <strong>借阅成功! 到期时间: <%= @record.should_return_date %></strong>
+      <% if @record.status == "pending" %>
+      <strong>预约成功!</strong>
+      <% else %>
+      <strong>借阅成功! 到期时间: <%= @record.should_return_date %>. 请联系管理员领书.</strong>
+      <% end %>
     </div>
     <% else %>
     <div class="alert alert-warning alert-dismissible fade in" role="alert">
       <button type="button" class="close" data-dismiss="alert" aria-label="Close">
         <span aria-hidden="true">×</span>
       </button>
-      <strong>你已借阅此书，尚未归还! 到期时间: <%= @record.should_return_date %>. 如有疑问，请联系管理员!</strong>
+      <% if @record.status == "pending" %>
+      <strong>你已预约此书,请耐心等待!</strong>
+      <% else %>
+      <strong>你已借阅此书，尚未归还! 到期时间: <%= @record.should_return_date %>. 如有疑问，请联系管理员.</strong>
+      <% end %>
     </div>
     <% end %>
   <% end %>
@@ -43,7 +51,7 @@
       </h3>
     </div>
     <div class="col-md-6 text-right">
-      <button type="button" class="btn btn-lg btn-primary">预约</button>
+      <%= link_to "预约", order_book_path(@book), method: :post, class: "btn btn-lg btn-primary" %>
       <%= link_to "借阅", borrow_book_path(@book), method: :post, class: "btn btn-lg btn-success #{@book.available <= 0 ? 'disabled' : ''}" %>
     </div>
   </div>
