--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -11,7 +11,7 @@
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-user fa-2x"></i><span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="/user">个人信息</a></li>
+            <li><a href="<%= edit_user_path %>">个人信息</a></li>
             <li><a href="<%= history_user_path %>">借阅记录</a></li>
             <li class="divider"></li>
             <li><%= link_to "退出", destroy_user_session_path, method: :delete %></li>
