--- a/app/views/home/contact.html.erb
+++ b/app/views/home/contact.html.erb
@@ -1,15 +1,5 @@
 <div class="home-wrapper">
-  <div class="masthead clearfix">
-    <div class="inner">
-      <nav>
-        <ul class="nav masthead-nav">
-          <li class="active">
-            <a href="/">首页</a>
-          </li>
-        </ul>
-      </nav>
-    </div>
-  </div>
+  <%= render "layouts/home_nav" %>
 
   <div class="inner">
     <div class="row">
