--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,23 +1,5 @@
 <div class="home-wrapper">
   <%= render "layouts/home_nav" %>
 
-  <div class="login inner">
-    <%= form_for(@user, url: user_session_path, html: {class: 'form-horizontal'}) do |f| %>
-      <div class="form-group">
-        <div class="col-md-offset-4 col-md-4">
-          <%= f.email_field :email, class: 'form-control input-lg', autofocus: true, placeholder: '邮箱' %>
-        </div>
-      </div>
-      <div class="form-group">
-        <div class="col-md-offset-4 col-md-4">
-          <%= f.password_field :password, class: 'form-control input-lg', autocomplete: "off", placeholder: '密码' %>
-        </div>
-      </div>
-      <div class="form-group">
-        <div class="col-md-offset-4 col-md-4">
-          <%= f.submit "登录", class: 'btn btn-block btn-success' %>
-        </div>
-      </div>
-    <% end %>
-  </div>
+  <%= render "layouts/login" %>
 </div>
